# dibr-player

./: .gitignore  CMakeLists.txt  cmake_debug
cpu/: dibr-player.cc  dibr-player_bad.cc  filters.cc  filters.h  main.cc  main.h  sdl_aux.cc  sdl_aux.h  warping.cc  warping.h
dibr_simple/: CMakeLists.txt  cut_half.py  dibr_simple.cpp  dibr_simple_bad.cpp
opencl/: dibr_ocl.h  main.cpp
